--- a/index.html
+++ b/index.html
@@ -2,48 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe Alura Start</title>
+    <title>Formadores Programação</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="img" alt="img">
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
-        </ul>
-    </header>
-    <section class="escola">
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
-        </div>
-        <img class="escola-imagem" src="img" alt="imagem">
-    </section>
-    <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <div class="estudante-todos">
-        <span></span>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="img" alt="foto">
-            <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/gabrielalacerdarodrigues"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://instagram.com/gablacerda"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
-            <h3 class="estudante-nome">Gabriela</h3>
-            <a href="https://github.com/gabrielalacerdarodrigues"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://instagram.com/gablacerda"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
-        </div>
-       
-    </div>
-    </section>
+    <header class="cabeçalho_lista">
+        <img class="cabeçalho_imagem" src="./img/civico_militar.jpg" alt="logo do Colégio">
+        <ul class="lista">
+        <li class="itens"> Colégio</li>
+        <li class="itens"> Alunos</li>
+        <li class="itens"> Equipe Pedagógica</li>
+        <li class="itens"> Secretaria</li>
+        <li class="itens"> Esportes</li>
+        <li class="itens"> Projetos</li>
+</ul>
+</header>
+
 </body>
 </html>
