--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header class="cabeçalho_lista">
-        <img class="cabeçalho_imagem" src="./img/civico_militar.jpg" alt="logo do Colégio">
+        <img class="cabeçalho_imagem" src="Entrega-de-mercadorias.png" alt="logo da mercadoria">
         <ul class="lista">
-        <li class="itens"> Colégio</li>
-        <li class="itens"> Alunos</li>
-        <li class="itens"> Equipe Pedagógica</li>
-        <li class="itens"> Secretaria</li>
-        <li class="itens"> Esportes</li>
-        <li class="itens"> Projetos</li>
+        <li class="itens"> Mercadorias</li>
+        <li class="itens"> Preços</li>
+        <li class="itens"> Exportações</li>
+        <li class="itens"> Fale Conosco</li>
+        <li class="itens"> Empresa</li>
+        <li class="itens"> Direitos e Diretrizes</li>
 </ul>
 </header>
 
